@@ -7,6 +7,8 @@ Then welcome, ah, oo costrinzi welcome, in OProfile.
 
 Please talk to the list before starting on something. We're not too scary.
 
+You can find some documentation on how OProfile works in doc/internals.html
+
 Here's a short list of some stuff you need to know to get started. Don't forget
 to read doc/CodingStyle
 
