@@ -19,7 +19,6 @@
 		<year>2000-2003</year>
 		<holder>Victoria University of Manchester, John Levon and others</holder>
 	</copyright>
-
 </bookinfo>
 
 <toc></toc>
